fix: use 100% instead of 100vw to avoid layout shift between local and domain

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -134,7 +134,7 @@ aside.overlay-mode ul>li.illustpop {
 
 html,
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-width: 0;
   max-width: 9600px;
@@ -373,7 +373,7 @@ header {
 
 .panel {
   position: relative;
-  min-width: 100vw;
+  min-width: 100%;
   width: 1920px;
   height: 100vh;
   flex-shrink: 0;
